# AllAmpsOnMe

./: .env.example  .gitignore  OA3K-phase3.md  OA3K.md  README.md  pyproject.toml  requirements-dev.txt  requirements-phase2.txt  requirements-phase3.txt  requirements.txt
configs/: openamp.yaml
configs/emulate/: baseline_clean.yaml  baseline_crunch.yaml  baseline_highgain.yaml  channels32.yaml  deep3x8.yaml  embed16.yaml  embed256.yaml  paper.yaml  smoke10.yaml  wavenet_a2.yaml  wavenet_a2_256.yaml
docs/: architecture.md  phase1-spec.md  phase2-spec.md  phase3-spec.md  pipeline.md
notebooks/: embedding_playground.ipynb  emulate_demo.ipynb  enroll_new_device.ipynb
results/: phase3_report.md
scripts/: download_egfxset.py  download_gfx.py  make_enroll_pair.py  t3k.py
src/openamp/: __init__.py  __main__.py  audio.py  benchmarks.py  cli.py  config.py  constants.py  corpus.py  cropcache.py  dataset.py  encoder.py  evaluate.py  manifest.py  nam.py  render.py  report.py  subset.py  train.py  verify.py
src/openamp/acquire/: __init__.py  auth.py  catalog.py  client.py  dedup.py  discover.py  download.py  finalize.py  migrate.py  normalize.py  select.py  validate.py
src/openamp/core/: __init__.py  config.py  constants.py  manifest.py  selection.py  util.py
src/openamp/corpus/: __init__.py  build.py  render.py  subset.py  verify.py
src/openamp/dsp/: __init__.py  audio.py  nam.py
src/openamp/emulate/: __init__.py  dataset.py  enroll.py  evaluate.py  models.py  tcn.py  train.py  wavenet.py
src/openamp/tone3000/: auth.py  catalog.py  client.py  dedup.py  discover.py  finalize.py  select.py  validate.py
src/t3k/: T3K.md  __init__.py  auth.py  cli.py  client.py  config.py  download.py  finalize.py  nam_backend.py  normalize.py  probe.py  ratelimit.py  validate.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_corpus.py  test_cropcache.py  test_datasets.py  test_dedup.py  test_discover.py  test_download.py  test_emulate.py  test_encoder.py  test_eval_adapters.py  test_finalize.py  test_manifest.py  test_migrate.py  test_nam.py  test_normalize.py  test_probes.py  test_ratelimit.py  test_render.py  test_select.py  test_subset.py  test_train.py  test_validate.py  test_verify.py
tests/fixtures/: README.md
