[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openamp"
version = "0.2.0"
description = "Open-Amp3000: TONE3000 capture acquisition, clean-corpus rendering, and a one-to-many FiLM-TCN amp emulator"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests==2.32.3",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "soundfile==0.12.1",
    "click==8.1.7",
    "tqdm==4.67.1",
    "pyyaml==6.0.2",
    # Blackwell (RTX 50-series, sm_120) needs the CUDA 12.8 build. The cu124
    # wheels torch shipped through 2.7 top out at sm_90 and die on the first
    # kernel launch. torch >=2.8 defaults to cu128 on PyPI, so a plain install
    # is enough -- no custom index URL.
    "torch==2.9.1",
    "torchaudio==2.9.1",
    # 0.13 is the floor for A2: it is the first release whose WaveNet parses the
    # A2 layer schema (FiLM/bottleneck/1x1/per-layer kernel sizes). Older releases
    # cannot build an A2 capture at all. See src/openamp/dsp/nam.py.
    "neural-amp-modeler==0.13.0",
    "pytorch-lightning==2.5.2",
    "auraloss==0.3.0",              # multi-resolution STFT loss for amp emulation
    "matplotlib==3.9.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[project.scripts]
openamp = "openamp.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
